@@ -645,7 +645,7 @@ GIcon *
 g_content_type_get_icon (const char *type)
 {
   char *mimetype_icon, *generic_mimetype_icon, *p;
-  char *icon_names[2];
+  char *icon_names[3];
   GThemedIcon *themed_icon;
   
   g_return_val_if_fail (type != NULL, NULL);
@@ -665,11 +665,14 @@ g_content_type_get_icon (const char *type)
   generic_mimetype_icon[(p - type) + strlen ("-x-generic")] = 0;
   
   icon_names[0] = mimetype_icon;
-  icon_names[1] = generic_mimetype_icon;
+  /* Not all icons have migrated to the new icon theme spec, look for old names too */
+  icon_names[1] = g_strconcat ("gnome-mime-", mimetype_icon, NULL);
+  icon_names[2] = generic_mimetype_icon;
   
-  themed_icon = g_themed_icon_new_from_names (icon_names, 2);
+  themed_icon = g_themed_icon_new_from_names (icon_names, 3);
   
   g_free (mimetype_icon);
+  g_free (icon_names[1]);
   g_free (generic_mimetype_icon);
   
   return G_ICON (themed_icon);
